# Autonomous_Robotic_Nurse

./: README.md
robonurse_face_recognition/: README.md  package.xml  setup.cfg  setup.py
robonurse_face_recognition/config/: face_params.yaml
robonurse_face_recognition/models/: arcface.onnx
robonurse_face_recognition/robonurse_face_recognition/: __init__.py
robonurse_face_recognition/robonurse_face_recognition/nodes/: face_recognition_node.py
robonurse_face_recognition/robonurse_face_recognition/register/: register_face.py
robonurse_hmi/: package.xml  setup.py
robonurse_hmi/launch/: hmi_system_launch.py
robonurse_hmi/robonurse_hmi/: __init__.py  operator_control.jsx  patient_services.jsx
robonurse_hmi/robonurse_hmi/nodes/: actuator_control_node.py  task_manager_node.py  teleop_bridge_node.py
robonurse_hw/: README.md  package.xml  setup.cfg  setup.py
robonurse_hw/config/: motor_params.yaml
robonurse_hw/firmware/: PID_motor_control.ino  mega_motor_control.ino  nano_head_control.ino
robonurse_hw/robonurse_hw/: __init__.py
robonurse_hw/robonurse_hw/nodes/: actuator_control_node.py  head_interact_bridge.py  motor_control_node.py  wheel_odometry_node.py
robonurse_interfaces/: CMakeLists.txt  package.xml
robonurse_interfaces/msg/: Detection.msg
robonurse_interfaces/srv/: DispenseItem.srv
robonurse_nav/: package.xml  setup.py
robonurse_nav/robonurse_nav/nodes/: local_planner_node.py  navigation_node.py
robonurse_patient_status/: README.md  package.xml  setup.cfg  setup.py
robonurse_patient_status/config/: status_map.yaml
robonurse_patient_status/launch/: patient_status.launch.py
robonurse_patient_status/robonurse_patient_status/: __init__.py
robonurse_patient_status/robonurse_patient_status/nodes/: patient_status_node.py
robonurse_perception/: package.xml  setup.cfg  setup.py
robonurse_perception/config/: camera_params.yaml
robonurse_perception/launch/: perception.launch.py
robonurse_perception/models/: classes.txt  robonurse_yolo.onnx
robonurse_perception/robonurse_perception/: __init__.py
robonurse_perception/robonurse_perception/nodes/: perception_camera_node.py
robonurse_voice/: README.md  package.xml  setup.cfg  setup.py
robonurse_voice/robonurse_voice/nodes/: speech_asr_node.py  speech_tts_node.py
video_stream_node/: README.md  package.xml  setup.cfg  setup.py
video_stream_node/video_stream_node/: __init__.py
video_stream_node/video_stream_node/nodes/: rtsp_server.py  video_stream_node.py
